Work-in-progress union types example.